IGNITE-6957 toArray added.